Re-structure for WalletConnect component and gendering markup for Header component and children components.

--- a/src/components/organisms/Header/header.module.css
+++ b/src/components/organisms/Header/header.module.css
@@ -1,5 +1,4 @@
 .root {
-    color:red;
     padding: 20px;
     background-color: lightgray;
     border-bottom: solid 1px #d6d6d6;
@@ -12,3 +11,21 @@
 .logoContainer {
 
 }
+
+.root .topMenu {
+
+}
+
+.root .topMenu .link {
+
+}
+
+.root .topMenu .label {
+
+}
+
+.root .topMenu .linkGroup {
+
+}
+
+.root .topMenu .linkGroup .linkItem {}
