--- a/src/components/organisms/Header/header.module.css
+++ b/src/components/organisms/Header/header.module.css
@@ -4,11 +4,11 @@
     border-bottom: solid 1px #d6d6d6;
 }
 
-.logo {
-
+.root .logoContainer {
+    @apply block w-48;
 }
 
-.logoContainer {
+.root .logoContainer .logo {
 
 }
 
