--- a/src/components/organisms/ConnectWallet/ConnectWallet.module.css
+++ b/src/components/organisms/ConnectWallet/ConnectWallet.module.css
@@ -1,3 +1,6 @@
-.btn-connect-wallet {
-  @apply text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800;
+.btnLogin {
+    composes: root from '../../atoms/Button/button.module.css';
+}
+.btnLogout{
+    composes: root from '../../atoms/Button/button.module.css';
 }
