--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,3 +4,14 @@
 @tailwind components;
 @tailwind utilities;
 
+body.dark {
+	color: #fff;
+	background: #363537;
+
+}
+
+body.light {
+	color: #363537;
+	background: #fafafa;
+
+}
