--- a/src/components/organisms/Footer/footer.module.css
+++ b/src/components/organisms/Footer/footer.module.css
@@ -1,6 +1,9 @@
 .root {
     padding: 20px;
-    background-color: lightgray;
     border-top: solid 1px #d6d6d6;
+		@apply flex w-full;
+}
+.topmenu {
+		@apply flex;
 }
 
