--- a/src/components/organisms/Header/header.module.css
+++ b/src/components/organisms/Header/header.module.css
@@ -1,13 +1,14 @@
 .root {
-  @apply sticky flex justify-between items-center px-4 py-2;
+  @apply sticky top-0 flex justify-between items-center px-4 py-2 space-x-4;
+  @apply bg-white dark:bg-gray-900 border-b border-b-gray-200 dark:border-b-gray-700;
 }
 
 .logoContainer {
-  @apply block w-48;
+  @apply w-12;
 }
 
 .menuContainer {
-  @apply flex items-center;
+  @apply flex items-center space-x-4;
 }
 
 /* Main Nav */
@@ -21,4 +22,8 @@
 
 .linkGroup li {
   @apply flex justify-center align-middle px-4 py-2;
+}
+
+.linkGroup li a {
+  @apply hover:text-blue-700;
 }
