--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,3 +3,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  height: 100%;
+  font-feature-settings: "cv02","cv03","cv04","cv11";
+}
+
+body {
+  @apply antialiased text-gray-700 dark:text-gray-400 bg-white dark:bg-gray-900;
+}
