--- a/src/components/organisms/Header/header.module.css
+++ b/src/components/organisms/Header/header.module.css
@@ -1,10 +1,10 @@
 .root {
-  @apply sticky top-0 flex justify-between items-center px-4 py-2 space-x-4;
+  @apply sticky top-0 flex justify-between items-center px-4 py-2 space-x-4 z-10;
   @apply bg-white dark:bg-gray-900 border-b border-b-gray-200 dark:border-b-gray-700;
 }
 
 .logoContainer {
-  @apply w-12;
+  @apply w-12 p-1;
 }
 
 .menuContainer {
