--- a/src/components/organisms/Hero/hero.module.css
+++ b/src/components/organisms/Hero/hero.module.css
@@ -1,14 +1,31 @@
 .type-1 {
-    border: 1px solid red;
-    margin: 10px;
+  @apply flex justify-evenly items-center;
+}
+
+.type-1 h2 {
+  @apply text-4xl font-medium mb-4;
+}
+
+.type-1 > div {
+  @apply w-1/2;
+}
+
+.type-1 > div:first-child {
+  @apply max-w-md;
+}
+
+.type-1 button {
+  @apply mt-4;
+}
+
+.image {
+  @apply w-1/2;
 }
 
 .type-2 {
-    border: 1px solid green;
-    margin: 10px;
+
 }
 
 .type-3 {
-    border: 1px solid yellow;
-    margin: 10px;
+
 }
