--- a/src/components/organisms/JobList/JobList.module.css
+++ b/src/components/organisms/JobList/JobList.module.css
@@ -1,22 +1,22 @@
-.section{
-	border: 1px solid darksalmon;
-	padding: 10px;
-	margin: 10px;
-	text-align: center;
+.section {
 }
+
 .itemlist{
 	@apply flex flex-wrap justify-center;
 }
+
 .item{
 	@apply text-sm px-5 py-2.5 mb-2 basis-6/12;
 }
+
 .item_inner{
 	@apply text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 p-5;
 }
-.heading{
-	font-size: 1.5em;
-	font-weight: bold;
+
+.heading {
+	@apply text-3xl font-medium text-center;
 }
+
 .author{
 	font-size: 0.8em;
 	font-weight: bold;
