--- a/src/components/organisms/JobList/JobList.module.css
+++ b/src/components/organisms/JobList/JobList.module.css
@@ -1,20 +1,16 @@
 .section {
 }
 
-.itemlist{
-	@apply flex flex-wrap justify-center;
+.itemlist {
+	@apply grid grid-cols-2 gap-8 mt-8;
 }
 
-.item{
+.item {
 	@apply text-sm px-5 py-2.5 mb-2 basis-6/12;
 }
 
-.item_inner{
-	@apply text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 p-5;
-}
-
 .heading {
-	@apply text-3xl font-medium text-center;
+	@apply text-4xl font-semibold text-center;
 }
 
 .author{
