--- a/src/components/atoms/Button/button.module.css
+++ b/src/components/atoms/Button/button.module.css
@@ -1,5 +1,5 @@
 .root {
-  @apply text-gray-700 bg-gray-200 hover:bg-gray-400 font-medium;
+  @apply text-gray-700 bg-gray-200 hover:bg-gray-300 hover:text-gray-900 font-medium;
   @apply rounded-lg px-4 py-2;
 }
 
