--- a/src/components/organisms/Header/header.module.css
+++ b/src/components/organisms/Header/header.module.css
@@ -1,5 +1,5 @@
 .root {
-  @apply sticky top-0 flex justify-between items-center px-4 py-2 space-x-4 z-10;
+  @apply sticky top-0 flex justify-between items-center px-4 py-2 space-x-4 z-10 text-sm font-medium;
   @apply bg-white dark:bg-gray-900 border-b border-b-gray-200 dark:border-b-gray-700;
 }
 
