--- a/src/components/organisms/CreateJob/createJobForm.module.css
+++ b/src/components/organisms/CreateJob/createJobForm.module.css
@@ -18,3 +18,9 @@
     padding: 10px;
 }
 
+.datePickerField {
+    /*for example only */
+    composes: root from '../../atoms/Field/field.module.css';
+    @apply inline-block w-1/2;
+}
+
