--- a/src/components/atoms/Field/field.module.css
+++ b/src/components/atoms/Field/field.module.css
@@ -1,7 +1,6 @@
 .root {
     /*for example only*/
     display: block;
-    border: 1px solid #d6d6d6;
     margin: 10px;
     padding: 10px;
 }
@@ -12,6 +11,7 @@
 
 .input {
     border: 1px solid #d6d6d6;
+    padding: 10px;
 }
 
 .input:disabled {
