--- a/src/components/atoms/Field/field.module.css
+++ b/src/components/atoms/Field/field.module.css
@@ -1,8 +1,7 @@
 .root {
     /*for example only*/
     display: block;
-    margin: 10px;
-    padding: 10px;
+    margin: 15px 0px 15px 0px;
 }
 
 .label {
