--- a/src/components/organisms/JobDetail/aboutContest.module.css
+++ b/src/components/organisms/JobDetail/aboutContest.module.css
@@ -1,3 +1,11 @@
 .root{
-	border: 1px solid #ccc;
+	@apply bg-white bg-opacity-5 rounded-lg mb-4;
+}
+
+.heading {
+	@apply border-b-0 p-4;
+}
+
+.content {
+	@apply p-4;
 }
