--- a/src/components/organisms/Header/header.module.css
+++ b/src/components/organisms/Header/header.module.css
@@ -1,11 +1,11 @@
 .root {
-  @apply sticky top-0 flex justify-between items-center px-4 py-2 space-x-4 z-10 text-sm font-medium;
-  @apply bg-white /*dark:bg-gray-900*/ border-b border-b-gray-200 /*dark:border-b-gray-700*/;
+  @apply sticky top-0 flex flex-wrap justify-between items-center px-4 py-2 space-x-4 z-10 text-sm font-medium;
+  @apply bg-white border-b border-b-gray-200;
 }
 
 .rootDark {
   composes: root;
-  @apply bg-gray-900 border-b-gray-700;
+  @apply bg-gray-900 border-b-gray-800;
 }
 
 .logoContainer {
@@ -13,20 +13,20 @@
 }
 
 .menuContainer {
-  @apply flex items-center space-x-4;
+  @apply flex flex-wrap items-center space-x-4;
 }
 
 /* Main Nav */
 .topMenu {
-  @apply flex justify-between items-center;
+  @apply flex flex-wrap justify-between items-center;
 }
 
 .linkGroup {
-  @apply flex;
+  @apply flex flex-wrap;
 }
 
 .linkGroup li {
-  @apply flex justify-center align-middle px-4 py-2;
+  @apply flex flex-wrap justify-center align-middle px-4 py-2;
 }
 
 .linkGroup li a {
