--- a/src/components/organisms/Uploader/uploader.module.css
+++ b/src/components/organisms/Uploader/uploader.module.css
@@ -26,7 +26,9 @@
 }
 .root .previewItem .fileAttachment {
     margin: 0px 10px 0px 0px;
+    font-size: 11px;
 }
+
 .root .previewItem .btnDelete {
     cursor: pointer;
     font-size: 11px;
