--- a/src/components/organisms/Header/header.module.css
+++ b/src/components/organisms/Header/header.module.css
@@ -1,5 +1,5 @@
 .root {
-  @apply sticky top-0 flex flex-wrap justify-between items-center px-4 py-2 space-x-4 z-10 text-sm font-medium;
+  @apply sticky top-0 flex flex-wrap justify-between items-center px-4 py-4 space-x-4 z-10 text-sm font-medium;
   @apply bg-white border-b border-b-gray-200;
 }
 
@@ -9,7 +9,11 @@
 }
 
 .logoContainer {
-  @apply w-8;
+  @apply w-16;
+}
+
+.logoContainer .logo {
+  @apply block w-24 h-16 border border-red-200;
 }
 
 .menuContainer {
@@ -31,4 +35,8 @@
 
 .linkGroup li a {
   @apply hover:text-blue-700;
+}
+
+.rootDark .linkGroup li a {
+  @apply hover:text-white;
 }
