--- a/src/components/atoms/TextInput/textInput.module.css
+++ b/src/components/atoms/TextInput/textInput.module.css
@@ -1,9 +1,21 @@
 .input {
   composes: input from '../Field/field.module.css';
+  @apply bg-transparent shadow-none border border-2 border-gray-200 rounded-md py-3 px-4;
 }
+
+.rootDark .input {
+  @apply border border-2 border-gray-800 rounded w-full;
+}
+
 .input_error {
   composes: input from '../Field/field.module.css';
+  @apply bg-transparent shadow-none border border-2 border-gray-200 rounded-md py-3 px-4;
 }
+
+.input_datepicker {
+  @apply border border-2 border-gray-200 rounded-md py-3 px-4;
+}
+
 .input_shimmer {
   font-size: 1rem;
 }
