--- a/src/components/organisms/Campaign/form.module.css
+++ b/src/components/organisms/Campaign/form.module.css
@@ -16,9 +16,7 @@
 }
 
 .root .form .fields {
-  border-bottom: 1px solid #d6d6d6;
-  margin: 0px 0px 30px 0px;
-  padding: 0px 0px 30px 0px;
+  @apply mb-6;
 }
 
 .detailsTitle {
@@ -41,6 +39,11 @@
   @apply text-red-700 my-0;
 }
 
-.react-datepicker__input-container {
-  @apply flex items-center justify-start w-full border border-2;
+.checkbox_root {
+  @apply border border-4 border-gray-800;
+}
+
+
+.fieldIcons_root {
+  @apply flex items-center;
 }
