--- a/src/components/organisms/Campaign/form.module.css
+++ b/src/components/organisms/Campaign/form.module.css
@@ -1,46 +1,56 @@
 .root {
-  display: block;
-  margin: 20px;
+    display: block;
+    margin: 20px;
 }
 
 .root .form {
-  @apply block;
+    @apply block;
 }
 
 .root label {
-  @apply mb-1 text-base;
+    @apply mb-1 text-base;
 }
 
 .root .pageTitle {
-  @apply font-semibold;
+    @apply font-semibold;
 }
 
 .root .form .fields {
-  border-bottom: 1px solid #d6d6d6;
-  margin: 0px 0px 30px 0px;
-  padding: 0px 0px 30px 0px;
+    border-bottom: 1px solid #d6d6d6;
+    margin: 0px 0px 30px 0px;
+    padding: 0px 0px 30px 0px;
 }
 
 .detailsTitle {
-  composes: pageTitle;
+    composes: pageTitle;
 }
 
 .tip {
-  @apply block text-xs;
+    @apply block text-xs;
 }
 
 .buttonsContainer {
-  @apply flex mb-4;
+    @apply flex mb-4;
 }
 
 .createCampaignErrorRoot {
-  padding: 10px 0px;
+    padding: 10px 0px;
 }
 
 .createCampaignErrorMessage {
-  @apply text-red-700 my-0;
+    @apply text-red-700 my-0;
 }
 
 .react-datepicker__input-container {
-  @apply flex items-center justify-start w-full border border-2;
+    @apply flex items-center justify-start w-full border border-2;
+}
+
+/* Customize for the datepicker */
+.rdwDatepicker {
+    composes: root from '../../atoms/Field/field.module.css';
+}
+
+.rdwDatepicker :global(.react-datepicker-wrapper) {
+    width: auto;
+    border: 1px solid red;
 }
