--- a/src/components/atoms/Checkbox/checkbox.module.css
+++ b/src/components/atoms/Checkbox/checkbox.module.css
@@ -1,27 +1,29 @@
 .root {
-    grid-template-areas: 'input label';
-    grid-template-columns: min-content 1fr;
+  grid-template-areas: 'input label';
+  grid-template-columns: min-content 1fr;
+  @apply flex items-center;
 }
 
 .input {
-    grid-area: input;
-
+  grid-area: input;
+  @apply rounded;
 }
 
 .icon {
-    grid-area: input;
+  grid-area: input;
 }
 
 .icon svg {
-
+  @apply hidden;
 }
 
 .label {
-    grid-area: label;
+  grid-area: label;
+  @apply ml-2;
 }
 
 .input:disabled ~ .label {
-    cursor: default;
+  cursor: default;
 }
 
 .input:checked:enabled + .icon {
@@ -29,7 +31,7 @@
 
 .input:active:enabled,
 .input:focus:enabled {
-    outline: none;
+  outline: none;
 }
 
 .input_shimmer {
