--- a/src/components/atoms/TextArea/textArea.module.css
+++ b/src/components/atoms/TextArea/textArea.module.css
@@ -1,6 +1,6 @@
 .input {
   composes: input from '../Field/field.module.css';
-  @apply border border-2 border-gray-200 rounded-md;
+  @apply border border-2 border-gray-200 rounded-md w-full;
 }
 
 .input:focus {
