--- a/src/components/organisms/Campaign/form.module.css
+++ b/src/components/organisms/Campaign/form.module.css
@@ -1,58 +1,69 @@
 .root {
-    display: block;
-    margin: 20px;
+  @apply max-w-2xl mx-auto;  
 }
 
 .root .form {
-    @apply block;
+  @apply block;
 }
 
 .root label {
-    @apply mb-1 text-base;
+  @apply mb-1 text-base;
 }
 
 .root .pageTitle {
-    @apply font-semibold;
+  @apply font-semibold;
 }
 
 .root .form .fields {
-    @apply mb-6;
+  @apply mb-6;
+}
+
+.root .form .fields + .fields {
+  @apply border-t border-gray-200 mt-12 pt-12;
 }
 
 .detailsTitle {
-    composes: pageTitle;
+  composes: pageTitle;
+  @apply text-2xl leading-6 mt-0 mb-6;
 }
 
 .tip {
-    @apply block text-xs;
+  @apply block text-xs;
 }
 
 .buttonsContainer {
-    @apply flex mb-4;
+  @apply flex mb-4;
 }
 
 .createCampaignErrorRoot {
-    padding: 10px 0px;
+  padding: 10px 0px;
 }
 
 .createCampaignErrorMessage {
-    @apply text-red-700 my-0;
+  @apply text-red-700 my-0;
 }
 
 .checkbox_root {
-    @apply border border-4 border-gray-800;
+  @apply border border-4 border-gray-800;
 }
 
 .fieldIcons_root {
-    @apply flex items-center;
+  @apply flex items-center;
 }
 
 /* Customize for the datepicker */
 .rdwDatepicker {
-    composes: root from '../../atoms/Field/field.module.css';
+  composes: root from '../../atoms/Field/field.module.css';
 }
 
 .rdwDatepicker :global(.react-datepicker-wrapper) {
-    width: auto;
-    border: 1px solid red;
+  @apply w-auto;
+}
+
+.rdwDatepicker :global(.react-datepicker-wrapper) input {
+  @apply border border-2 border-gray-200 rounded-md py-2 px-4;
+}
+
+.rdwDatepicker :global(.react-datepicker-wrapper) input:focus {
+  @apply shadow-none;
 }
