--- a/src/components/atoms/Field/field.module.css
+++ b/src/components/atoms/Field/field.module.css
@@ -1,16 +1,13 @@
 .root {
-    /*for example only*/
-    display: block;
-    margin: 15px 0px 15px 0px;
+  @apply mb-6;
 }
 
 .label {
-    display: block;
+  display: block;
 }
 
 .input {
-    border: 1px solid #d6d6d6;
-    padding: 10px;
+
 }
 
 .input:disabled {
