--- a/src/components/atoms/Field/fieldIcons.module.css
+++ b/src/components/atoms/Field/fieldIcons.module.css
@@ -1,11 +1,13 @@
 .root {
-    grid-template-areas: 'before input after';
-    grid-template-columns: auto 1fr auto;
+  grid-template-areas: 'before input after';
+  grid-template-columns: auto 1fr auto;
+  @apply flex items-center;
 }
 
 .input {
-    grid-column: before-start / after-end;
-    grid-row: input-start / input-end;
+  grid-column: before-start / after-end;
+  grid-row: input-start / input-end;
+  @apply mr-2;
 }
 
 .input > input {
@@ -14,22 +16,25 @@
 
 .before,
 .after {
-
 }
 
 .before:empty,
 .after:empty {
-    display: none;
+  @apply hidden;
 }
 
 .before {
-    grid-area: before;
+  grid-area: before;
 }
 
 .after {
-    grid-area: after;
+  grid-area: after;
 }
 
 .before svg {
+  @apply w-2;
+}
 
+.root svg {
+  @apply text-gray-600 w-4;
 }
