--- a/src/components/organisms/Campaign/form.module.css
+++ b/src/components/organisms/Campaign/form.module.css
@@ -2,6 +2,10 @@
   @apply max-w-2xl mx-auto;  
 }
 
+.rootDark {
+  @apply max-w-2xl mx-auto;  
+}
+
 .root .form {
   @apply block;
 }
@@ -10,8 +14,16 @@
   @apply mb-1 text-base;
 }
 
-.root .pageTitle {
-  @apply font-semibold;
+.root label {
+  @apply mb-1 text-base;
+}
+
+.rootDark label {
+  @apply mb-1 text-base;
+}
+
+.rootDark h2.pageTitle {
+  @apply text-white text-6xl font-medium leading-6 mt-0 mb-12;
 }
 
 .root .form .fields {
@@ -22,9 +34,25 @@
   @apply border-t border-gray-200 mt-12 pt-12;
 }
 
+.rootDark .form .fields + .fields {
+  @apply border-t border-gray-800 mt-12 pt-12;
+}
+
 .detailsTitle {
   composes: pageTitle;
   @apply text-2xl leading-6 mt-0 mb-6;
+}
+
+.rootDark .detailsTitle {
+  @apply text-white;
+}
+
+.rootDark input {
+  @apply border border-2 border-gray-700;
+}
+
+.rootDark textarea {
+  @apply bg-transparent border border-2 border-gray-700;
 }
 
 .tip {
@@ -61,7 +89,11 @@
 }
 
 .rdwDatepicker :global(.react-datepicker-wrapper) input {
-  @apply border border-2 border-gray-200 rounded-md py-2 px-4;
+  @apply bg-transparent border border-2 border-gray-200 rounded-md py-2 px-4;
+}
+
+.rootDark .rdwDatepicker :global(.react-datepicker-wrapper) input {
+  @apply border border-2 border-gray-700;
 }
 
 .rdwDatepicker :global(.react-datepicker-wrapper) input:focus {
