--- a/src/components/organisms/Campaign/List/item.module.css
+++ b/src/components/organisms/Campaign/List/item.module.css
@@ -1,11 +1,39 @@
 .root {
-	@apply border border-gray-200 dark:border-gray-800 p-6 rounded-xl hover:shadow-lg transition-shadow flex flex-col items-stretch
+	@apply border border-gray-200 hover:border-violet-600 p-6 rounded-xl hover:shadow-lg transition-shadow flex flex-col items-stretch;
 }
 
-/*.item {*/
-/*	@apply text-sm px-5 py-2.5 mb-2 basis-6/12;*/
-/*}*/
+.rootDark {
+	@apply border-gray-800;
+}
 
-/*.author {*/
-/*	@apply text-sm font-bold;*/
-/*}*/
+.itemHead {
+	@apply flex items-center;
+}
+
+.couponAmoun {
+	@apply inline-block text-2xl font-bold text-gray-800 mr-4;
+}
+
+.rootDark .couponAmoun {
+	@apply text-white;
+}
+
+.couponLabel {
+	@apply bg-green-100 flex items-center text-green-600 text-xs rounded-xl py-1 pl-2 pr-3;
+}
+
+.couponLabel svg {
+	@apply fill-current mr-1;
+}
+
+.itemBody {
+	@apply py-6;
+}
+
+.itemFoot {
+	@apply flex items-center justify-between border-t border-gray-200 pt-3;
+}
+
+.getCoupon {
+	@apply bg-violet-600 hover:bg-violet-600 border border-violet-600 text-white hover:text-white py-1.5 px-3 rounded-md font-medium transition-all duration-200 ease-in-out;
+}
