--- a/src/components/organisms/Campaign/List/list.module.css
+++ b/src/components/organisms/Campaign/List/list.module.css
@@ -1,24 +1,34 @@
 .root {
-	@apply container mx-auto grid md:grid-cols-2 gap-8 mt-8;
+	@apply container mx-auto;
+}
+
+.headingWrap {
+	@apply mb-20;
 }
 
 .filter {
-	@apply flex items-center
+	@apply flex items-center;
 }
 
 .filterForm {
+}
 
+.listWrap {
+	@apply grid md:grid-cols-2 lg:grid-cols-3 gap-6 mt-8;
 }
 
 .item {
 	@apply text-sm px-5 py-2.5 mb-2 basis-6/12;
 }
 
-.author {
-	@apply text-sm font-bold;
+.noResult {
+	@apply text-sm text-center;
 }
 
-.noResult {
-	font-size: 11px;
-	text-align: center;
+.actionWrap {
+	@apply mt-8 text-center;
+}
+
+.loadMore {
+	@apply inline-block border border-2 border-gray-200 rounded-md py-2 px-6 text-center w-52;
 }
