--- a/src/components/atoms/Heading/heading.module.css
+++ b/src/components/atoms/Heading/heading.module.css
@@ -1,7 +1,14 @@
 .heading {
   @apply md:text-4xl lg:text-5xl font-semibold text-gray-800 text-center mb-6;
 }
-
+.headingDark{
+	composes:heading;
+	@apply text-gray-100;
+}
 .subHeading {
   @apply max-w-xl mx-auto text-center text-base mb-4 leading-6;
+}
+.subHeadingDark {
+	composes:subHeading;
+	@apply text-gray-100;
 }
