--- a/src/components/organisms/Campaign/Details/detail.module.css
+++ b/src/components/organisms/Campaign/Details/detail.module.css
@@ -13,11 +13,15 @@
 }
 
 .pageContent {
-  @apply w-full md:w-3/4 md:pr-4;
+  @apply border-r border-gray-200 w-full md:w-2/3 md:pr-14;
+}
+
+.rootDark .pageContent {
+  @apply border-r border-gray-800;
 }
 
 .pageSidebar {
-  @apply w-full md:w-1/4 md:pl-4;
+  @apply w-full md:w-1/3 md:pl-14;
 }
 
 .rootDark .pageTitle {
@@ -57,12 +61,20 @@
   @apply bg-gray-50 border border-gray-200 rounded-lg;
 }
 
+.Box + .Box {
+  @apply mt-5;
+}
+
+.boxHilite {
+  @apply border border-2 border-violet-600 rounded-lg mb-5;
+}
+
 .rootDark .Box {
   @apply bg-gray-800 border border-gray-700;
 }
 
 .boxTitle {
-  @apply border-b border-gray-200 font-medium text-gray-800 text-lg m-0 py-3 px-4;
+  @apply border-b border-gray-200 font-semibold text-gray-800 text-lg m-0 py-3 px-4;
 }
 
 .rootDark .boxTitle {
@@ -86,17 +98,37 @@
 }
 
 .couponItem {
-  @apply bg-white border border-gray-200 hover:border-violet-600 rounded-md py-3 px-3 transition-all duration-200;
+  @apply bg-white border border-gray-200 hover:border-violet-600 hover:shadow-md rounded-md py-4 px-3 relative transition-all duration-200;
+}
+
+.couponItem:hover .btnGetCoupon {
+  @apply bg-violet-600 text-white;
 }
 
 .rootDark .couponItem {
-  @apply border border-gray-700;
+  @apply bg-transparent border border-gray-700 hover:border-violet-600 transition-all duration-200;
 }
 
 .couponItem h4 {
-  @apply font-medium mt-0 mb-2 p-0;
+  @apply font-semibold text-sm mt-0 mb-1 p-0;
+}
+
+.rootDark .couponItem h4 {
+  @apply text-white;
+}
+
+.itemMeta {
+  @apply text-xs text-gray-500;
+}
+
+.rootDark .itemMeta {
+  @apply text-gray-300;
 }
 
 .btnGetCoupon {
-  @apply border border-gray-200 text-sm font-medium rounded py-1 px-2;
+  @apply hover:bg-violet-600 border border-violet-600 hover:text-white text-sm font-normal rounded absolute top-0 right-3 py-1.5 px-2 translate-y-2/4;
+}
+
+.rootDark .btnGetCoupon {
+  @apply text-white;
 }
