--- a/src/components/organisms/Campaign/List/list.module.css
+++ b/src/components/organisms/Campaign/List/list.module.css
@@ -32,3 +32,7 @@
 .loadMore {
 	@apply hover:bg-violet-600 hover:text-white inline-block border border-2 border-gray-200 hover:border-violet-600 rounded-md py-2 px-6 text-center w-52;
 }
+
+.rootDark .loadMore {
+	@apply border border-gray-700;
+}
