--- a/src/components/organisms/Campaign/Details/detail.module.css
+++ b/src/components/organisms/Campaign/Details/detail.module.css
@@ -135,3 +135,20 @@
 .rootDark .btnGetCoupon {
   @apply text-white;
 }
+
+.couponNotes {
+  padding: 10px;
+  color: red;
+  text-align: center;
+}
+.couponContainer{
+  display: block;
+  text-align: center;
+}
+.couponCodes {
+  display: block;
+  padding: 20px;
+  border: 5px dotted yellow;
+  color: #1c1918;
+  font-size: 16px;
+}
