--- a/src/components/organisms/Campaign/Details/detail.module.css
+++ b/src/components/organisms/Campaign/Details/detail.module.css
@@ -66,16 +66,11 @@
 }
 
 .couponContainer {
-  display: block;
-  text-align: center;
+  @apply w-full;
 }
 
 .couponCodes {
-  display: block;
-  padding: 20px;
-  border: 5px dotted yellow;
-  color: #1c1918;
-  font-size: 16px;
+  @apply bg-orange-50 text-orange-600 rounded block py-2 px-4 w-full;
 }
 
 .root .title {
@@ -159,5 +154,5 @@
 }
 
 .btnGetCoupon {
-  @apply hover:bg-violet-600 border border-violet-600 hover:text-white text-sm font-normal rounded absolute top-0 right-3 py-1.5 px-2 translate-y-2/4;
+  @apply hover:bg-violet-600 border border-violet-600 hover:text-white hover:cursor-pointer text-sm font-normal rounded absolute top-0 right-3 py-1.5 px-2 translate-y-2/4;
 }
