--- a/src/components/organisms/Campaign/Details/detail.module.css
+++ b/src/components/organisms/Campaign/Details/detail.module.css
@@ -9,7 +9,7 @@
 }
 
 .pageTitle {
-  @apply text-5xl font-bold text-gray-800 mt-0 mb-8;
+  @apply text-5xl font-semibold text-gray-800 mt-0 mb-8;
 }
 
 .pageContent {
