--- a/src/components/organisms/Header/header.module.css
+++ b/src/components/organisms/Header/header.module.css
@@ -1,6 +1,5 @@
 .root {
-  @apply sticky top-0 flex flex-wrap justify-between items-center px-4 py-4 space-x-4 z-10 text-sm font-medium;
-  @apply bg-white border-b border-b-gray-200;
+  @apply bg-white border-b border-b-gray-200 sticky top-0 flex flex-wrap justify-between items-center px-6 py-3.5 space-x-4 z-10 text-sm font-medium;
 }
 
 .rootDark {
