--- a/src/components/organisms/Campaign/success.module.css
+++ b/src/components/organisms/Campaign/success.module.css
@@ -1,21 +1,15 @@
 .root {
-    /* For example only*/
-    border: 5px solid green;
-    padding: 20px;
 }
 
 .root .actions {
-    display: block;
-    margin-top: 20px;
+  @apply block;
 }
 
 .btnEdit {
-    composes: root_lowPriority from '../../atoms/Button/button.module.css';
-    margin-right: 20px;
+  composes: root_lowPriority from '../../atoms/Button/button.module.css';
 }
 
 .btnView {
-    composes: root_highPriority from '../../atoms/Button/button.module.css';
-
+  composes: root_highPriority from '../../atoms/Button/button.module.css';
 }
 
