--- a/src/components/organisms/Campaign/List/list.module.css
+++ b/src/components/organisms/Campaign/List/list.module.css
@@ -14,7 +14,7 @@
 }
 
 .listWrap {
-	@apply grid md:grid-cols-2 lg:grid-cols-3 gap-6 mt-8;
+	@apply grid md:grid-cols-2 lg:grid-cols-3 gap-6 mt-8 overflow-visible;
 }
 
 .item {
