--- a/src/components/organisms/Campaign/NftCollection/Details/detail.module.css
+++ b/src/components/organisms/Campaign/NftCollection/Details/detail.module.css
@@ -12,7 +12,7 @@
 }
 
 .pageContent {
-  @apply mx-auto max-w-screen-xl py-12;
+  @apply mx-auto max-w-screen-xl py-12 px-6;
 }
 
 .rootDark .pageContent {
