--- a/src/components/organisms/Campaign/Details/detail.module.css
+++ b/src/components/organisms/Campaign/Details/detail.module.css
@@ -172,3 +172,11 @@
 .btnGetCoupon {
   @apply hover:bg-violet-600 border border-violet-600 hover:text-white hover:cursor-pointer text-sm font-normal rounded absolute top-0 right-3 py-1.5 px-2 translate-y-2/4;
 }
+
+.nftCollectionWrap {
+  padding: 10px 0px;
+}
+
+.nftCollectionLink {
+
+}
