--- a/src/components/organisms/Campaign/List/item.module.css
+++ b/src/components/organisms/Campaign/List/item.module.css
@@ -69,5 +69,5 @@
 }
 
 .getCoupon {
-	@apply bg-blue-600 hover:bg-blue-700 text-white hover:text-white py-2 px-3 rounded-md font-medium transition-all duration-200 ease-in-out hover:cursor-pointer;
+	@apply bg-blue-600 hover:bg-blue-700 text-white hover:text-white py-2 px-3 rounded-md font-medium transition-all duration-200 ease-in-out hover:cursor-pointer ml-auto;
 }
