--- a/src/components/organisms/Campaign/NftCollection/List/item.module.css
+++ b/src/components/organisms/Campaign/NftCollection/List/item.module.css
@@ -1,10 +1,10 @@
 .root {
-	@apply border border-gray-200 hover:border-blue-600 rounded-lg hover:shadow-lg flex flex-col items-stretch hover:cursor-pointer hover:-mt-1 hover:mb-1 transition-all duration-200;
+	@apply bg-white ring-1 ring-gray-200 hover:ring-blue-600 rounded-lg hover:shadow-lg flex flex-col items-stretch hover:cursor-pointer hover:-mt-1 hover:mb-1 transition-all duration-200;
 }
 
 .rootDark {
   composes: root;
-	@apply border-gray-800;
+	@apply ring-gray-700 bg-gray-800 bg-opacity-60;
 }
 
 .itemHead {
