--- a/src/components/organisms/Campaign/NftCollection/Details/detail.module.css
+++ b/src/components/organisms/Campaign/NftCollection/Details/detail.module.css
@@ -21,7 +21,6 @@
 }
 
 .rootDark .pageContent {
-  @apply border-r border-gray-800;
 }
 
 .rootDark .pageTitle {
@@ -51,22 +50,22 @@
 
 /* Binace */
 .bsc {
-  @apply bg-gray-100 inline-block rounded-full mr-2 w-6 h-6 indent-96 overflow-hidden bg-[url('/chains/bsc.svg')] bg-cover;
+  composes: bsc from "../../../Campaign/List/item.module.css";
 }
 
 /* Ethereum */
 .ethereum {
-  @apply bg-gray-100 inline-block rounded-full mr-2 w-6 h-6 indent-96 overflow-hidden bg-[url('/chains/ethereum.svg')] bg-cover;
+  composes: ethereum from "../../../Campaign/List/item.module.css";
 }
 
 /* Polygon */
 .polygon {
-  @apply bg-gray-100 inline-block rounded-full mr-2 w-6 h-6 indent-96 overflow-hidden bg-[url('/chains/polygon.svg')] bg-cover;
+  composes: polygon from "../../../Campaign/List/item.module.css";
 }
 
 /* Solana */
 .solana {
-  @apply bg-gray-100 inline-block rounded-full mr-2 w-6 h-6 indent-96 overflow-hidden bg-[url('/chains/solana.svg')] bg-cover;
+  composes: solana from "../../../Campaign/List/item.module.css";
 }
 
 .rootDark .btnGetCoupon {
@@ -181,6 +180,7 @@
   padding: 10px;
   text-align: center;
 }
+
 .addCampaignBtn {
-text-align: center;
+  text-align: center;
 }
