Improve resonsive layout
Improve responsive layout

--- a/src/components/organisms/Campaign/List/list.module.css
+++ b/src/components/organisms/Campaign/List/list.module.css
@@ -22,7 +22,7 @@
 }
 
 .noResult {
-	@apply text-sm text-center;
+	@apply p-4 text-sm text-gray-700 bg-gray-100 rounded-lg dark:bg-gray-700 dark:text-gray-300;
 }
 
 .actionWrap {
