Tuning for Infinite loading

--- a/src/components/organisms/Campaign/List/list.module.css
+++ b/src/components/organisms/Campaign/List/list.module.css
@@ -41,3 +41,13 @@
 	padding: 10px;
 	text-align: center;
 }
+
+.infiniteLoading {
+
+}
+.infiniteFinished {
+	/*for example only*/
+	width: 100%;
+	text-align: center;
+	font-weight: bold;
+}
