--- a/src/components/organisms/ToggleTheme/toggleTheme.module.css
+++ b/src/components/organisms/ToggleTheme/toggleTheme.module.css
@@ -1,3 +1,3 @@
-.toggleThemeBtn{
- @apply p-5 bg-slate-500 text-white dark:bg-gray-400;
+.toggleThemeBtn {
+  @apply bg-slate-500 dark:bg-gray-400 text-white p-5;
 }
