--- a/src/components/atoms/Button/button.module.css
+++ b/src/components/atoms/Button/button.module.css
@@ -1,6 +1,5 @@
 .root {
-  @apply text-gray-700 bg-gray-200 hover:bg-gray-300 hover:text-gray-900 font-medium;
-  @apply rounded-lg px-4 py-2;
+  @apply text-gray-700 bg-gray-200 hover:bg-gray-300 hover:text-gray-900 font-medium rounded-lg px-4 py-2;
 }
 
 .root:active {
@@ -25,7 +24,7 @@
 
 .root_highPriority {
   composes: root;
-  @apply bg-purple-500 text-white hover:bg-purple-800 hover:text-white;
+  @apply bg-blue-600 text-white hover:bg-blue-700 hover:text-white font-normal;
 }
 
 .root_lowPriorityNegative,
