--- a/src/components/organisms/Campaign/List/item.module.css
+++ b/src/components/organisms/Campaign/List/item.module.css
@@ -48,24 +48,40 @@
 }
 
 /* All Chains */
+.nftCollectionWrap {
+	@apply border border-gray-200 hover:border-gray-300 hover:bg-gray-100 rounded-full flex items-center pr-3 pl-1 py-0.5 mr-1 mb-1 relative;
+}
+
+.collectionName {
+	@apply text-gray-800 font-medium text-sm;
+}
+
+.contractAdd {
+	@apply bg-gray-800 text-white text-sm rounded-lg absolute py-1 px-2 left-0 -top-7 transition-all duration-300 hidden;
+}
+
+.nftCollectionWrap:hover .contractAdd {
+	@apply block -top-8;
+}
+
 .chainWrap {
 	@apply border border-red-800 flex items-center mt-8;
 }
 
 .bsc {
-  @apply bg-gray-100 inline-block rounded-full mr-2 w-6 h-6 indent-96 overflow-hidden bg-[url('/chains/bsc.svg')] bg-cover;
+  @apply bg-gray-100 inline-block rounded-full mr-1 w-5 h-5 indent-96 overflow-hidden bg-[url('/chains/bsc.svg')] bg-cover;
 }
 
 .ethereum {
-  @apply bg-gray-100 inline-block rounded-full mr-2 w-6 h-6 indent-96 overflow-hidden bg-[url('/chains/ethereum.svg')] bg-cover;
+  @apply bg-gray-100 inline-block rounded-full mr-1 w-5 h-5 indent-96 overflow-hidden bg-[url('/chains/ethereum.svg')] bg-cover;
 }
 
 .polygon {
-  @apply bg-gray-100 inline-block rounded-full mr-2 w-6 h-6 indent-96 overflow-hidden bg-[url('/chains/polygon.svg')] bg-cover;
+  @apply bg-gray-100 inline-block rounded-full mr-1 w-5 h-5 indent-96 overflow-hidden bg-[url('/chains/polygon.svg')] bg-cover;
 }
 
 .solana {
-  @apply bg-gray-100 inline-block rounded-full mr-2 w-6 h-6 indent-96 overflow-hidden bg-[url('/chains/solana.svg')] bg-cover;
+  @apply bg-gray-100 inline-block rounded-full mr-1 w-5 h-5 indent-96 overflow-hidden bg-[url('/chains/solana.svg')] bg-cover;
 }
 
 .getCoupon {
