--- a/src/components/organisms/Campaign/List/item.module.css
+++ b/src/components/organisms/Campaign/List/item.module.css
@@ -52,12 +52,20 @@
 	@apply border border-gray-200 hover:border-blue-600 rounded-full flex items-center pr-3 pl-1 py-0.5 mr-1 mb-1 relative overflow-hidden;
 }
 
+.rootDark .nftCollectionWrap {
+	@apply bg-gray-800 border-0;
+}
+
 .nftCollectionWrap:hover {
-	@apply overflow-visible;
+	@apply overflow-visible hover:border-gray-400;
 }
 
 .collectionName {
 	@apply text-gray-800 font-medium text-sm;
+}
+
+.rootDark .collectionName {
+	@apply text-white;
 }
 
 .contractAdd {
@@ -90,16 +98,32 @@
   @apply bg-gray-100 inline-block rounded-full mr-1 w-5 h-5 indent-96 overflow-hidden bg-[url('/chains/bsc.svg')] bg-cover;
 }
 
+.rootDark .bsc {
+	@apply bg-gray-800 ring-1 ring-gray-700;
+}
+
 .ethereum {
   @apply bg-gray-100 inline-block rounded-full mr-1 w-5 h-5 indent-96 overflow-hidden bg-[url('/chains/ethereum.svg')] bg-cover;
+}
+
+.rootDark .ethereum {
+	@apply bg-gray-800 ring-1 ring-gray-700;
 }
 
 .polygon {
   @apply bg-gray-100 inline-block rounded-full mr-1 w-5 h-5 indent-96 overflow-hidden bg-[url('/chains/polygon.svg')] bg-cover;
 }
 
+.rootDark .polygon {
+	@apply bg-gray-800 ring-1 ring-gray-700;
+}
+
 .solana {
   @apply bg-gray-100 inline-block rounded-full mr-1 w-5 h-5 indent-96 overflow-hidden bg-[url('/chains/solana.svg')] bg-cover;
+}
+
+.rootDark .solana {
+	@apply bg-gray-800 ring-1 ring-gray-700;
 }
 
 .getCoupon {
