--- a/src/components/organisms/Campaign/List/item.module.css
+++ b/src/components/organisms/Campaign/List/item.module.css
@@ -1,5 +1,5 @@
 .root {
-	@apply border border-gray-200 hover:border-blue-600 p-4 rounded-xl hover:shadow-lg transition-shadow flex flex-col items-stretch hover:-mt-1 hover:mb-1 transition-all duration-500;
+	@apply border border-gray-200 hover:border-blue-600 p-4 rounded-xl hover:shadow-lg transition-shadow flex flex-col items-stretch transition-all duration-500;
 }
 
 .rootDark {
@@ -32,7 +32,7 @@
 }
 
 .itemBody {
-	@apply py-6;
+	@apply py-4;
 }
 
 .itemBody p {
@@ -40,7 +40,7 @@
 }
 
 .itemFoot {
-	@apply flex items-center justify-end border-t border-gray-200 pt-4 mt-auto;
+	@apply flex items-center justify-end border-t border-gray-200 pt-3 mt-auto;
 }
 
 .rootDark .itemFoot {
@@ -49,7 +49,7 @@
 
 /* All Chains */
 .nftCollectionWrap {
-	@apply border border-gray-200 hover:border-blue-600 rounded-full flex items-center pr-3 pl-1 py-0.5 mr-1 mb-1 relative overflow-hidden;
+	@apply border border-gray-200 hover:border-blue-300 rounded-full flex items-center pr-3 pl-1 py-0.5 mr-1 mb-1 relative overflow-hidden;
 }
 
 .rootDark .nftCollectionWrap {
@@ -69,7 +69,7 @@
 }
 
 .contractAdd {
-	@apply bg-gray-800 text-white text-sm rounded-md absolute py-1 px-2 left-1/2 -translate-x-1/2 -top-8 transition-all duration-500 opacity-0;
+	@apply bg-gray-800 text-white text-xs rounded-md absolute py-1.5 px-2 left-1/2 -translate-x-1/2 -top-8 transition-all duration-500 opacity-0;
 }
 
 .contractAdd::after {
@@ -94,6 +94,7 @@
 	@apply border border-red-800 flex items-center mt-8;
 }
 
+/* All chain */
 .bsc {
   @apply bg-gray-100 inline-block rounded-full mr-1 w-5 h-5 indent-96 overflow-hidden bg-[url('/chains/bsc.svg')] bg-cover;
 }
@@ -126,6 +127,7 @@
 	@apply bg-gray-800 ring-1 ring-gray-700;
 }
 
+/* Get coupon button */
 .getCoupon {
-	@apply bg-blue-600 hover:bg-blue-700 text-white hover:text-white py-2 px-3 rounded-md font-medium transition-all duration-200 ease-in-out hover:cursor-pointer ml-auto;
+	@apply bg-blue-50 hover:bg-blue-700 ring-1 ring-blue-400 hover:ring-0 text-blue-600 hover:text-white py-1.5 px-3 rounded-md text-sm font-normal transition-all duration-200 ease-in-out hover:cursor-pointer ml-auto;
 }
