--- a/src/components/organisms/Campaign/Related/related.module.css
+++ b/src/components/organisms/Campaign/Related/related.module.css
@@ -16,3 +16,10 @@
 .couponList {
     composes: couponList from '../../Campaign/Details/detail.module.css';
 }
+
+.infiniteFinished {
+    composes: infiniteFinished from '../../Campaign/List/list.module.css';
+}
+.infiniteLoading {
+    composes: infiniteLoading from '../../Campaign/List/list.module.css';
+}
